k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${K8S_NAMESPACE}
  labels:
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/managed-by: fdp-detection-service
